[fix] 토큰 문제 해결 및 불필요 의존성 정리